force-app/main/default/objects/Education__c/fields/CollegeSchoolName__c.field-meta.xml
<CustomField>
    <fullName>CollegeSchoolName__c</fullName>
    <label>College/ School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>