force-app/main/default/objects/Education__c/fields/MarksInPercent__c.field-meta.xml
<CustomField>
    <fullName>MarksInPercent__c</fullName>
    <label>Marks in Percent</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>