force-app/main/default/objects/Education__c/fields/UniversityBoard__c.field-meta.xml
<CustomField>
    <fullName>UniversityBoard__c</fullName>
    <label>University/ Board</label>
    <length>100</length>
    <type>Text</type>
</CustomField>